Nav bar covers content after link fix

--- a/portfolio.css
+++ b/portfolio.css
@@ -41,7 +41,7 @@ li a:hover:not(.active) {
     text-decoration: none;
     color: cornflowerblue;
 }
-li a:hover.active {
+li a:hover.active a:focus.active{
     text-decoration: none;
 }
 li a:focus.active {
@@ -76,9 +76,14 @@ img#headerIMG {
     position: fixed;
     width: 100%;
 }
+.aboutMeDiv {
+    /*  Will need to do this for each of the navigation link div's  */
+    padding-top: 50px;
+    margin-top: -50px !important;
+}
 .aboutMeInfoDiv {
     padding: 20px;
-    height:370px;
+    height:390px;
     vertical-align: middle;
     text-align: center;
 }
